objects/Department__c.object
<CustomObject>
    <fields>
        <fullName>Department_Email__c</fullName>
        <label>Department Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dept_Code__c</fullName>
        <label>Dept Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dept_Name__c</fullName>
        <label>Dept Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Staff_Count__c</fullName>
        <label>Staff Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Department</label>
    <nameField>
        <displayFormat>Dept-{0000}</displayFormat>
        <label>Department Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Test_Department</fullName>
        <active>true</active>
        <errorConditionFormula>Dept_Name__c != null</errorConditionFormula>
        <errorMessage>Department name should not be empty</errorMessage>
    </validationRules>
</CustomObject>